version/0.19/_sources/api/solver/_autosummary/settings/phase_24.rst.txt
:orphan:

.. _phase_24:

phase
=====

.. autoclass:: ansys.fluent.core.solver.settings_241.phase_24.phase
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`phase_child <phase_child_24>`


.. rubric:: Included in:

==================================================   ==========================================

Parent                                                                                  Summary

==================================================   ==========================================
:ref:`velocity_inlet_child <velocity_inlet_child>`       'child_object_type' of velocity_inlet.

==================================================   ==========================================

