version/0.24/_sources/api/solver/_autosummary/settings/phase_24.rst.txt
:orphan:

.. _phase_24:

phase
=====

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.phase_24.phase
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`rename <rename>`                                              Rename the object.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`phase_child <phase_child_24>`


.. rubric:: Included in:

==========================================================   ==============================================

Parent                                                                                              Summary

==========================================================   ==============================================
:ref:`rans_les_interface_child <rans_les_interface_child>`       'child_object_type' of rans_les_interface.

==========================================================   ==============================================

